--- a/tdtfs/index.html
+++ b/tdtfs/index.html
@@ -12,7 +12,7 @@
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/FlightSimulatorTejedaDeTietarEditionWeb.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body onload="unityInstance.SetFullscreen(1)">
+  <body>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
